v2.5.8.2 - Drag and Drop now supports dragging directories to load all that
	   is found inside them.
	 - Color Info now displays the gamma/gain'ed image values instead of 
	   just the original values.
	 - MultiView images (Stereo) now supports a side-by-side view.

v2.5.8.1 - Bug fixed drag and drop of sequences as it had gotten broken.
	 - Bug fixed preview pictures which could show wrong colors in movie
	   files.
	 - Removed a warning of wrong OpenGL pixel type.
	 - Added support to load all sequences and movies in a directory 
	   through command-line.  Example:

	   $ mrViewer .

	 - Added -a audio flag to load sequences with audio attached.
	 - Made added audio appear in the audio drop-down window in the
	   interface, allowing user to toggle the audio of a movie file with
	   the audio of music or dialogue brought from outside.

v2.5.8.0 - Bug fixed Reel/EDL window when two reels were loaded and clips could
	   not be selected.
	 - Bug fixed EDL Edit window to support more than two reels.
	 - Updated all platforms to use ffmpeg 2.2
	 - Bug fixed some movies not starting at first frame.
	 - Bug fixed crash when loading two or more EXRs simultaneously.
	 - Fixed red and blue dots in preview pictures.
	 - Added proper detection of Real Media Format.
	 - Made EDL button a toggle button to better reflect each reel's
	   edl status.
v2.5.7.4 - Bug fixed ghosting of lines and text in grease marker's previous
	   or next frames.
	 - Updated all platforms to use OpenEXR 2.1.0.
v2.5.7.3 - Bug fixed two crashes in EDL window and most of its functionality.
	 - Bug fixed a hang up in EDL window when not in EDL mode.
	 - Internally changed PixelType to just Pixel to simplify api.
	 - Added support to parse commandline for left/right (stereo) images.
	 - Bug fixed disappearing picture when opening menu in window with
	   DVD sub.
	 - Bug fixed movies not starting at first frame.
v2.5.7.2 - Removed Xlib DSOs from linux distribution to make them run in other
	   machines.